--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
        <repository>
          <id>internal.repo</id>
          <name>Internal repo</name>
-         <url>file:///c:\</url>
+         <url>file:///C:\Program Files\Apache Software Foundation\Tomcat 9.0\webapps</url>
        </repository>
    </distributionManagement>
 
@@ -164,6 +164,18 @@
               </execution>
             </executions>
           </plugin>
+<plugin>
+<groupId>org.apache.tomcat.maven</groupId>
+<artifactId>tomcat7-maven-plugin</artifactId>
+<version>2.2</version>
+<configuration>
+<url>http://localhost:8080/manager/text</url>
+<server>TomcatServer</server>
+<path>/webapps</path>
+<username>admin</username>
+<password>admin</password>
+</configuration>
+</plugin>
         </plugins>
       </build>
     </profile>
